[project]
name = "advanced-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "bs4>=0.0.2",
    "faiss-cpu>=1.11.0.post1",
    "langchain-community>=0.3.27",
    "langchain-nvidia-ai-endpoints>=0.3.14",
    "langgraph>=0.6.3",
    "langgraph-checkpoint-sqlite>=2.0.11",
    "pypdf>=5.9.0",
    "streamlit>=1.48.0",
    "tavily-python>=0.7.10",
]
